# ApacheArrowExample

./: CMakeLists.txt  README.md  build_deps.sh
.devcontainer/: Dockerfile  devcontainer.json
cpp/: CMakeLists.txt  README.md  build_env.sh
cpp/src/: example.cc
cpp/src/api/: row.cc  row.h
cpp/src/examples/: array_example.cc  array_example.h  parquet_example.cc  parquet_example.h
cpp/src/parquet/: parquet_reader.cc  parquet_reader.h
java_client/: pom.xml
java_client/src/main/java/com/example/demos/: ParquetWriteDemo.java
python/: README.md  a.out  abc.cpp  parquet-demo.py
resources/: example.parquet
src/: example.cc
src/examples/: array_example.cc  parquet_example.h
